# simple_factorb_slam

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  \  run.sh  sim  sim.c
include/: measurement_types.h
src/simulator/: airplane.h  main.c  make_measurements.c  make_measurements.h
src/slam/: main.cpp
